--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,26 @@
 /* Give your page a fun background color */
-
+body{
+  background-color: lightblue;
+  color: black;
+  font family : Arial , Helvetica, sans-serif;
+  margin: 10% 20%
+}
 /* Make the header and footer a different color from the background */
-
+.header{
+background-color: darkblue;
+color: pink;
+text-align: center;
+}
 /* Align the h1 containing your name in the center of the header*/
 
 /* Make your p tag a different color and italic */
-
+footer{
+color: orange;
+font-style: italic;
+background-color: darkblue;
+}
 /* Put a border around your image */
-
+img{
+border: 3px solid black;
+}
 /* Change the font-family of your list */
